# debtsense

./: .env.example  .gitignore  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  base_model.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  router.py  security.py
backend/app/middleware/: __init__.py  rate_limiter.py  request_id.py
backend/app/modules/ai_advisor/: __init__.py  llm_client.py  prompts.py  router.py  schemas.py  service.py
backend/app/modules/analytics/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/auth/: models.py  router.py  schemas.py  service.py
backend/app/modules/debts/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/expenses/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/financial_engine/: __init__.py  engine.py  router.py  schemas.py  service.py
backend/app/modules/income/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/notifications/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/modules/simulation_engine/: __init__.py  engine.py  router.py  schemas.py  service.py
backend/app/modules/users/: models.py  router.py  schemas.py  service.py
backend/tests/unit/: test_allocation_month.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.dev.yml  docker-compose.yml
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+54 files in other folders)
